@@ -144,13 +144,6 @@
 					</table>
 				</td>
 			</tr>
-			<tr>
-				<td></td>
-				<td>
-					<a class="btnstyle3" onclick="SaveLightSwitch();" data-i18n="Save">Save</a>&nbsp;&nbsp;&nbsp;
-					<a class="btnstyle3" onclick="DeleteLightSwitch();" data-i18n="Delete">Delete</a>
-				</td>
-			</tr>
 		</table>
 		<br>
 </div>
